2004-12-16  Dan Williams  <dcbw@redhat.com>
	* user_share.c: (spawn_httpd):
	Set error = NULL so we don't spew messages.

2004-12-06  Alexander Larsson  <alexl@redhat.com>

	* file-share-properties.c:
	* user_share.c: (httpd_child_setup):
	Build fixes from j@bootlab.org

2004-12-03  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== gnome-user-share 0.4 ===
	
2004-12-03  Alexander Larsson  <alexl@redhat.com>

	* gnome-user-share.spec: 
	* NEWS:
	Update for release.

2004-11-29  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	* configure.in:
	* user_share.c:
	If selinux availible, make sure we don't go to selinux context
	when exec:ing apache.
	Re-indent code.

2004-11-29  Alexander Larsson  <alexl@redhat.com>

	* dav_user.conf:
	* user_share.c: (get_port), (spawn_httpd):
	Some generic fixes and BSD port changes from
	Joe Marcus Clarke <marcus@FreeBSD.org>

2004-11-26  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

	* user_share.c: 
	* file-share-properties.c:
	Add copyright headers.

=== gnome-user-share 0.3 ===
	
2004-11-26  Alexander Larsson  <alexl@redhat.com>
	
	* NEWS:
	Update for release

	* file-share-properties.c: 
	* dav_user.conf:
	Change user to guest and realm to something
	that describes what user to use.
	
2004-11-26  Alexander Larsson  <alexl@redhat.com>

	* .cvsignore:
	Add new files

	* md5.[ch]:
	Add md5 checksum implementation, required for the digest auth

	* desktop_gnome_file_sharing.schemas.in:
	* user_share.c:
	* dav_user.conf:
	Implement password support

	* Makefile.am:
	* file-share-properties.c:
	* file-share-properties.glade:
	Add properties ui
	
	* configure.in:
	Bump version to 0.3
	
	* gnome-user-share.spec:
	Update for new version
	
2004-09-11  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: added
	* user_share.c: (spawn_httpd): fix warning

2004-09-09  Alexander Larsson  <alexl@redhat.com>

	* gnome-user-share.spec: 
	* configure.in: