@@ -11,4 +11,5 @@ desktop_gnome_file_sharing.schemas
 gnome-user-share
 gnome-file-share-properties
 libtool
+ltmain.sh
 stamp-h1
