@@ -1,0 +1,13 @@
+*.gmo
+*.mo
+*.pot
+Makefile
+Makefile.in
+Makefile.in.in
+POTFILES
+po2tbl.sed
+po2tbl.sed.in
+cat-id-tbl.c
+stamp-cat-id
+messages
+missing
