@@ -1,0 +1,6 @@
+# List of source files containing translatable strings.
+# Please keep this file sorted alphabetically.
+desktop_gnome_file_sharing.schemas.in
+file-share-properties.c
+file-share-properties.glade
+user_share.c
