@@ -1,0 +1,2 @@
+# List of source files that should NOT be translated.
+# Please keep this file sorted alphabetically.
